added images and popup card

--- a/app.html
+++ b/app.html
@@ -87,7 +87,9 @@
 				</div>
 				<div class="c-error__content">
 					<h2>Oops sorry! We weren't able to get your location.</h2>
-					<p>Make sure your location is turned on.<br />You can still make a manual search or try again later!</p>
+					<p>Make sure your location is turned on.
+                        <!-- <br />You can still make a manual search or try again later! -->
+                    </p>
 				</div>
 			</div>
 		</div>
