--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
 		<link rel="icon" href="MyIcon.png" type="image/png" />
 		<script src="script/app.js"></script>
 		<link rel="stylesheet" href="css/screen.css" />
-		<title>EveFind</title>
+		<title>EvCharge</title>
 	</head>
 	<body>
 		<div class="c-map js-map" id="mapid"></div>
